--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # library untuk proses scanning menggunakan camera
+  mobile_scanner: ^6.0.2
+  # library untuk ngatur app permission
+  permission_handler: ^11.3.1
+  # library untuk lakuin generate dari data mentahh ke QR Code
+  pretty_qr_code: ^3.0.0
+  # library untuk proses sharing ke app eksternal
+  share_plus: ^10.1.2
+  # library untuk share gambar
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -76,17 +85,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: SF UI Display
+      fonts:
+        - asset: assets/fonts/sf_ui_display/sf-ui-display-medium.ttf
+        - asset: assets/fonts/sf_ui_display/sf-ui-display-bold.ttf
+          weight: 600
+        - asset: assets/fonts/sf_ui_display/sf-ui-display-light.ttf
+          weight: 300
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
